# BotW-BetterVR

./: .gitignore  BetterVR-OpenXR.sln  CMakeLists.txt  README.md  package_mod.bat  vcpkg.json
OpenXR/: BotW-OpenXR-App.vcxproj  BotW-OpenXR-App.vcxproj.filters  BotWHook.cpp  BotWHook.h  CubeGraphics.cpp  DxUtility.cpp  OpenXrProgram.cpp  pch.h
OpenXR/Utility/: XrToString.h
Source/: OpenXR.cpp  framebuffer.cpp  layer.h  layer_setup.cpp  ovr.cpp  pch.h  rendering.cpp  steamvr.cpp
docs/: index.html
include/: cemu.h  game_structs.h  pch.h
resources/: BetterVR_Layer.json  Launch_BetterVR.bat
resources/BreathOfTheWild_BetterVR/: DISABLED_BetterVR.asm  patch_CTRL_HookWeaponHands.asm  patch_CTRL_WeaponAttacks.asm  patch_ChangeWeaponMtx.asm  patch_Find3DFrameBuffer.asm  patch_FirstPersonMode.asm  patch_Misc.asm  patch_RND_StereoRendering.asm  patch_STUB_StereoRenderingDebugging.asm  patch_UpdateCamera.asm  patch_UpdateProjectionMatrix.asm  patch_UpdateSettings.asm  rules.txt
src/: instance.h
src/hooking/: camera.cpp  cemu_hooks.h  compatibility.cpp  controls.cpp  entity_debugger.cpp  framebuffer.cpp  hands.cpp  hands.h  layer.cpp  layer.h  rumble.h  settings.cpp  weapon.cpp
src/rendering/: d3d12.cpp  openxr.cpp  openxr.h  renderer.cpp  renderer.h  texture.cpp  texture.h  vulkan.cpp  vulkan.h  vulkan_imgui.cpp
src/utils/: d3d12_utils.h  logger.cpp  logger.h  update_checker.cpp  update_checker.h  vulkan_utils.h
